# mmcif_parser

./: .gitignore  Cargo.toml  Makefile  README.md
crates/: CHANGELOG.md
crates/mmcif-analyze/: Cargo.toml  README.md
crates/mmcif-analyze/benches/: analyze.rs
crates/mmcif-analyze/src/: lib.rs
crates/mmcif-core/: Cargo.toml  README.md
crates/mmcif-core/benches/: parse.rs
crates/mmcif-core/src/: atom.rs  error.rs  lib.rs  model.rs
crates/mmcif-core/tests/: biopython_11as.rs  biopython_summary.py
crates/mmcif_analyze/: Cargo.toml  README.md
crates/mmcif_analyze/src/: lib.rs
crates/mmcif_core/: Cargo.toml  README.md
crates/mmcif_core/benches/: parse.rs
crates/mmcif_core/src/: bond.rs  parser.rs
crates/mmcif_core/tests/: biopython_11as.rs
docs/: README.md
python/mmcif_parser_py/: Cargo.toml  Makefile  README.md  pyproject.toml
python/mmcif_parser_py/src/: lib.rs
python/mmcif_parser_py/tests/: test_biopython_parity.py  test_structure.py
scripts/: generate_docs.sh
