[workspace]
members = [
    "crates/mmcif-core",
    "crates/mmcif-analyze",
    "python/mmcif-parser_py",
]
resolver = "2"
default-members = [
    "crates/mmcif-core",
    "crates/mmcif-analyze",
]

[workspace.package]
edition = "2024"
authors = ["chengjilai"]
license = "MIT"
homepage = "https://github.com/chengjilai/mmcif-parser"
repository = "https://github.com/chengjilai/mmcif-parser"
documentation = "https://github.com/chengjilai/mmcif-parser/tree/main/docs"
rust-version = "1.85"

[workspace.dependencies]
thiserror = "1.0"
once_cell = "1.19"
futures = { version = "0.3", default-features = false, features = ["std"] }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
criterion = "0.5"
pretty_assertions = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
