[package]
name = "mmcif-analyze"
version = "0.1.0"
edition = "2021"
authors = ["mmcif_parser team"]
description = "Spatial search utilities on top of mmcif-core"
license = "MIT"
readme = "README.md"

[dependencies]
mmcif-core = { path = "../mmcif-core" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "analyze"
harness = false
