[package]
name = "mmcif-analyze"
version = "0.1.0"
edition = "2024"
authors = ["chengjilai"]
description = "Spatial search utilities on top of mmcif-core"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chengjilai/mmcif_parser"
repository = "https://github.com/chengjilai/mmcif_parser"
documentation = "https://github.com/chengjilai/mmcif_parser/tree/main/crates/mmcif-analyze#readme"

[dependencies]
mmcif-core = { path = "../mmcif-core" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "analyze"
harness = false
