[package]
name = "mmcif-core"
version = "0.1.0"
edition = "2024"
authors = ["chengjilai"]
description = "Lightweight mmCIF reader and data structures"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chengjilai/mmcif_parser"
repository = "https://github.com/chengjilai/mmcif_parser"
documentation = "https://github.com/chengjilai/mmcif_parser/tree/main/crates/mmcif-core#readme"

[dependencies]
thiserror = "1.0"
futures = { version = "0.3", default-features = false, features = ["std"] }
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
once_cell = "1.19"

[dev-dependencies]
pretty_assertions = "1.4"
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "parse"
harness = false
