[package]
name = "mmcif_core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["chengjilai"]
description = "Lightweight mmCIF reader and data structures"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chengjilai/mmcif_parser"
repository = "https://github.com/chengjilai/mmcif_parser"
documentation = "https://github.com/chengjilai/mmcif_parser/tree/main/crates/mmcif_core#readme"

[dependencies]
thiserror.workspace = true
futures.workspace = true
flate2.workspace = true
once_cell.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
criterion.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bench]]
name = "parse"
harness = false
