[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "mmcif_parser"
version = "0.1.0"
description = "Python bindings for the mmcif-parser Rust crates"
readme = "README.md"
authors = [{ name = "chengjilai" }]
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["structural-biology", "crystallography"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = []

[tool.maturin]
bindings = "pyo3-abi3"
module-name = "mmcif_parser"
